--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Portfolio | NikulDev</title>
   <link rel="stylesheet" href="style.css" class="css">
   <link rel="stylesheet" href="media.css">
+  <link rel="icon" href="logo.png" />
 </head>
 
 <body>
