--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
     <footer>
       <div class="container">
         <div class="footer-wrapper">
-          <div class="footer-faded-text">John Doe</div>
+          <div class="footer-faded-text"></div>
 
           <div class="link-wrapper">
             <div>
